# lib4jformats

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: build.md  logo.md  tests.md
example/: CMakeLists.txt  example.cpp
examples/: CMakeLists.txt  arc.cpp  loc.cpp
src/: lib4jformats.h
src/Archive/: ARCFile.cpp  ARCFile.h
src/File/: File.cpp  File.h  InnerFile.cpp  InnerFile.h
src/IO/: BinaryIO.h  BinaryIO.t.h  BinaryReader.cpp  BinaryWriter.cpp  Conversion.cpp  Conversion.h  Types.h
src/Localization/: LOCFile.cpp  LOCFile.h  LOCJson.cpp  Language.cpp  Language.h
tests/: CMakeLists.txt
tests/src/: arc.cpp  loc.cpp
